--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Quang-Huy Tran"
 title_separator          : "-"
 name                     : &name "Quang-Huy Tran"
-description              : &description "Erasmus Joint Master student in Medical Imaging and Applications, AI/Computer Vision Engineer, and Data Scientist."
+description              : &description "AI/Computer Vision Engineer, and Data Scientist, Erasmus Joint Master student in Medical Imaging and Applications"
 url                      : https://huytrnq.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "huytrnq/huytrnq.github.io"
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "Quang-Huy Tran"
   pronouns         : "he/him"
-  bio              : "Erasmus Joint Master student in Medical Imaging and Applications, AI/Computer Vision Engineer, and Data Scientist"
-  location         : "Girona, Spain"
-  employer         : "University of Girona"
+  bio              : "AI/Computer Vision Engineer, and Data Scientist, Erasmus Joint Master student in Medical Imaging and Applications"
+  location         : "Nijmegen, Netherlands"
+  employer         : "ScreenPoint Medical"
   uri              : # URL
   email            : "huytrq.em@gmail.com" 
 
